css/vds-223c04.webflow.css
/* ... */
.menu-left {
  grid-column-gap: 3em;
  grid-row-gap: 3em;
  display: flex;
}

.menu-logo {
  width: 9.75em;
  height: 4.75em;
}

.menu-right {
  grid-column-gap: 2.25em;
  grid-row-gap: 2.25em;
  display: flex;
}

.button {
  grid-column-gap: .625em;
  grid-row-gap: .625em;
  border: 1px solid var(--dark-brown);
  justify-content: flex-start;
  align-items: center;
  height: 4em;
  padding: 1.25em 1.5em;
  transition: opacity .2s;
  display: flex;
}

.button.brown-fill {
  background-color: var(--dark-brown);
  color: var(--light-brown);
  border-style: none;
}

.button.green-fill {
  background-color: var(--green);
  color: var(--dark-green);
  border-style: none;
}

.button.beige-fill {
  background-color: var(--beige);
  color: var(--dark-green);
  border-style: none;
}

.svg-head-icon {
  justify-content: flex-start;
  align-items: center;
  width: 1.5em;
  height: 1.5em;
  display: block;
  position: relative;
}

.svg-head-icon._683516 {
  color: #683516;
}

.svg-head-icon.text-light-brown-c9aa7c._32 {
  width: 2em;
  height: 2em;
}

.svg-head-icon._20 {
  flex: none;
  width: 1.25em;
  height: 1.25em;
}

.container {
  z-index: 1;
  padding-left: 2.5em;
  padding-right: 2.5em;
}

.container.rel1 {
  position: relative;
}

.container.center {
  justify-content: center;
  align-items: flex-start;
  display: flex;
  position: relative;
}

.hero-head-wrap {
  color: var(--brown);
  position: relative;
}

.text-60 {
  text-transform: uppercase;
  font-family: De Martega Personaluse, Verdana, sans-serif;
  font-size: 3.75em;
  line-height: 90%;
}

.hero-head-2-wrap {
  text-align: right;
  width: 18em;
  position: absolute;
  inset: auto 0% .2em auto;
}

.hero-info-wrap {
  grid-column-gap: 1.5em;
  grid-row-gap: 1.5em;
  flex-flow: column;
  display: flex;
}

.hero-text-btn-wrap {
  grid-column-gap: 17.25em;
  grid-row-gap: 17.25em;
  justify-content: space-between;
  display: flex;
}

.btn-wrap {
  grid-column-gap: .5em;
  grid-row-gap: .5em;
  flex: none;
  display: flex;
}

.text-white {
  color: var(--white);
}

._18-text {
  font-size: 1.125em;
}

.hero-text-tags {
  grid-column-gap: 1.875em;
  grid-row-gap: 1.875em;
  flex-flow: column;
  display: flex;
}

.hero-tags-wrap {
  grid-column-gap: .25em;
  grid-row-gap: .25em;
  flex-flow: wrap;
  width: 28em;
  display: flex;
}

.tag {
  grid-column-gap: .625em;
  grid-row-gap: .625em;
  border: 1px solid var(--dark-brown);
  color: var(--dark-brown);
  justify-content: flex-start;
  align-items: center;
  height: 2.75em;
  padding: .875em;
  display: flex;
}

.tag.brown-fill {
  background-color: var(--dark-brown);
  color: var(--light-brown);
  border-style: none;
}

.tag.green-fill {
  background-color: var(--green);
  color: var(--dark-green);
  border-style: none;
}

.hero-img-block {
  grid-column-gap: .5em;
  grid-row-gap: .5em;
  flex-flow: column;
  margin-top: 5.75em;
  display: flex;
  overflow: hidden;
}

.hero-img-wrap {
  grid-column-gap: .5em;
  grid-row-gap: .5em;
  display: flex;
}

.hero-img-wrap._1 {
  position: relative;
  left: -18.7em;
}

.hero-img-wrap._2 {
  position: relative;
  right: -.4em;
}

.hero-img {
  width: 21.25em;
  height: 18.75em;
}

.hero-bg {
  z-index: 0;
  width: 100vw;
  position: absolute;
  inset: 0%;
}

.rel1 {
  z-index: 1;
  position: relative;
}

.section {
  margin-top: 8.25em;
  padding-bottom: 6.375em;
}

.section._10 {
  z-index: 2;
  background-color: var(--beige);
  margin-top: 0;
  padding-top: 10em;
  padding-bottom: 10em;
  position: relative;
}

.section._10._0 {
  padding-bottom: 0;
}

.section.white {
  background-color: var(--white);
  margin-top: 0;
  padding-top: 8.25em;
}

.section.italian {
  background-color: var(--white);
  justify-content: center;
  align-items: flex-start;
  margin-top: 0;
  padding-top: 5.25em;
  padding-bottom: 6.25em;
  display: flex;
  position: relative;
}

.section._100 {
  margin-top: 6.25em;
}

.section.form {
  z-index: 2;
  background-color: var(--beige);
  position: relative;
  overflow: hidden;
}

.h2-content {
  grid-column-gap: 4em;
  grid-row-gap: 4em;
  flex-flow: column;
  justify-content: flex-start;
  align-items: center;
  display: flex;
}

.h2-wrap {
  grid-column-gap: 1.875em;
  grid-row-gap: 1.875em;
  justify-content: flex-start;
  align-items: center;
  display: flex;
}

.h2-wrap.big {
  grid-column-gap: 4em;
  grid-row-gap: 4em;
  flex-flow: column;
  justify-content: center;
  align-items: center;
}

.text-brown {
  color: var(--brown);
}

.text-caps {
  text-transform: uppercase;
}

.needs-wrap {
  grid-column-gap: 1.25em;
  grid-row-gap: 1.25em;
  display: flex;
}

.need {
  grid-column-gap: 2.25em;
  grid-row-gap: 2.25em;
  flex-flow: column;
  justify-content: flex-end;
  align-items: center;
  width: 27.5em;
  height: 37.5em;
  padding: 2.875em 2.5em 2.5em;
  display: flex;
  position: relative;
}

.need._20 {
  padding-left: 1.25em;
  padding-right: 1.25em;
}

.need-svg {
  z-index: 1;
  color: var(--light-yellow);
  justify-content: flex-start;
  align-items: center;
  width: 27.5em;
  height: 37.5em;
  display: block;
  position: absolute;
  inset: 0%;
}

.need-svg.orange {
  color: var(--light-orange);
}

.need-svg.light-green {
  color: var(--light-green);
}

.need-text-wrap {
  z-index: 2;
  grid-column-gap: .875em;
  grid-row-gap: .875em;
  color: #5d5d5d;
  text-align: center;
  flex-flow: column;
  justify-content: flex-start;
  align-items: center;
  display: flex;
  position: relative;
}

.text-dark-brown-693d22 {
  color: var(--dark-brown);
}

.need-img {
  z-index: 0;
  object-fit: cover;
  align-self: center;
  width: 16.5em;
  height: 24em;
  position: absolute;
  inset: -24% 0% 0% 19.5%;
}

.section-brown {
  background-color: var(--dark-brown);
  color: var(--grey);
  padding-top: 10em;
}
/* ... */

